# microos-tools

./: .gitignore  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  man-online  man-online.sh  microos-tools.spec
.github/workflows/: test.yml
.obs/: workflows.yml
caasp/cloud-init/: cc_suse_caasp.py
caasp/usr/lib/systemd/system/: adjust-cloud-cfg.service  setup-salt-minion.service
caasp/usr/sbin/: adjust-cloud-cfg  migrate-ntp2chrony
cloud-init/: cc_suse_caasp.py
devel-tools/: Makefile.am  makepackageportable  microos-ro  microos-ro.service  microos-rw  rpm-sortbysize  rpmorphan.c  sysext-add-debug
dracut/: Makefile.am
dracut/98selinux-microos/: module-setup.sh  selinux-microos-relabel.sh
etc/salt/minion.d/: grains_refresh.conf
firstboot/: Makefile.am  MicroOS-firstboot.service.in
import-pubring/: Makefile.am  import-pubring-from-rpmdb  import-pubring-from-rpmdb.path  import-pubring-from-rpmdb.service
locale-check/: Makefile.am  locale-check.c  ssh-locale-check.sh
selinux/: Makefile.am  fixfiles_exclude_dirs  selinux-autorelabel-generator  systemd-tmpfiles-setup-sys.service  tmp.conf
selinux/89selinux-relabel/: selinux-microos-relabel.sh
selinux/98selinux-microos/: module-setup.sh  selinux-microos-relabel.sh
subvol-mount-generator/: Makefile.am  suse-btrfs-subvol-mount-generator
sysctl/: Makefile.am
systemd-printenv/: Makefile.am
systemd-proxy-env/: Makefile.am  setup-systemd-proxy-env  setup-systemd-proxy-env.path  setup-systemd-proxy-env.service
systemd-tmpfs/: Makefile.am  tmp.mount
systemd-tmpfs/salt-minion/: TMPDIR.conf
systemd-tmpfs/tmp.mount/: selinux.conf
test/: test.sh  testscript
tmpfs/: Makefile.am
tmpfs/salt-minion/: salt-minion-tmpdir.conf  salt-tukit.conf
usr/lib/: MicroOS-firstboot
usr/lib/sysctl.d/: 51-corefiles.conf
usr/lib/systemd/system/: MicroOS-firstboot.service  printenv.service
usr/lib/systemd/system/sysinit.target.wants/: MicroOS-firstboot.service
usr/sbin/: btrfsQuota  migrate-ntp2chrony  setup-systemd-proxy-env
usr/share/man/man8/: btrfsQuota.8
zypp-configs/: Makefile.am  excludedocs.conf  no-multiversion.conf  no-recommends.conf
zypp-single-rpmtrans/: 10-zypp-single-rpmtrans.conf  Makefile.am  zypp-single-rpmtrans.sh
