systemddir = $(systemdsystemunitdir)
tmpmountdir = $(systemdsystemunitdir)/tmp.mount.d
saltminiondir = $(systemdsystemunitdir)/salt-minion.service.d

tmpmount_DATA = tmp.mount/selinux.conf
tmpfiles_DATA = salt-minion/salt-minion-tmpdir.conf
saltminion_DATA = salt-minion/TMPDIR.conf

EXTRA_DIST = $(DATA)
